[package]
name = "strop"
version = "0.3.0"
authors = ["Sam M W <you@example.com>"]
edition = "2021"
description = "stochastically generates machine code"
license = "MIT"
repository = "https://github.com/omarandlorraine/strop"
homepage = "https://github.com/omarandlorraine/strop"

[[bin]]
name = "arm"
path = "src/tests/arm.rs"

[[bin]]
name = "mips"
path = "src/tests/mips.rs"

[features]
default = ["armv4t", "m6502", "m6809", "z80", "mips"]
armv4t = ["armv4t_emu", "unarm"]
m6502 = ["mos6502"]
m6809 = ["emu6809"]
z80 = ["iz80", "dez80"]
mips = ["trapezoid-core"]

[dependencies]
armv4t_emu = { version = "0.1.0", optional = true }
rand = "0.9.1"
unarm = { version = "=1.9.0", optional = true }
emu6809 = { version = "0.1.2", optional = true }
iz80 = { version = "0.4.1", optional = true }
mos6502 = {version = "0.6.0", optional = true }
dez80 = { version = "4.0.1", optional = true }
bitmatch = "0.1.1"
trapezoid-core = { version = "0.3.0", default-features = false, optional = true }
