[package]
name = "strop"
version = "0.3.0"
authors = ["Sam M W <you@example.com>"]
edition = "2024"
description = "stochastically generates machine code"
license = "MIT"
repository = "https://github.com/omarandlorraine/strop"
homepage = "https://github.com/omarandlorraine/strop"

[features]
default = ["arm", "armv4t", "m6502", "m6809", "z80", "mips", "sm83", "i8080"]
armv4t = ["armv4t_emu", "unarm"]
arm = ["armagnac", "unarm"]
m6502 = ["mos6502"]
m6809 = ["emu6809"]
z80 = ["iz80", "dez80"]
i8080 = ["iz80"]
mips = ["trapezoid-core"]
sm83 = ["mizu-core"]

[dependencies]
armagnac = { version = "0.3.0", optional = true }
armv4t_emu = { version = "0.1.0", optional = true }
rand = "0.10.0"
unarm = { version = "2.1", optional = true }
emu6809 = { version = "0.1.2", optional = true }
iz80 = { version = "0.4.1", optional = true }
mos6502 = {version = "0.6.0", optional = true }
dez80 = { version = "4.0.1", optional = true }
bitmatch = "0.1.1"
trapezoid-core = { version = "0.3.0", default-features = false, optional = true }
mizu-core = { version = "1.3.0", optional = true }
